--- a/Natorus/sass/main.scss
+++ b/Natorus/sass/main.scss
@@ -12,9 +12,11 @@
 @import 'components/card';
 @import 'components/composition';
 @import 'components/feature_box';
+@import 'components/form';
 @import 'components/story';
 
 @import 'layout/grid';
+@import 'layout/footer';
 @import 'layout/header';
 
 @import 'pages/home';
