--- a/Natorus/sass/components/_popup.scss
+++ b/Natorus/sass/components/_popup.scss
@@ -10,6 +10,13 @@
   visibility: hidden;
   transition: all 0.3s;
 
+  @supports (-webkit-backdrop-filter: blur(10px)) or
+    (backdrop-filter: blur(10px)) {
+    -webkit-backdrop-filter: blur(10px);
+    backdrop-filter: blur(10px);
+    background-color: rgba($color-black, 0.3);
+  }
+
   &__content {
     @include absCenter;
 
@@ -27,6 +34,11 @@
   &__left {
     width: 33.33333%;
     display: table-cell;
+
+    @include respond(tab-port) {
+      width: 100%;
+      display: inline-block;
+    }
   }
 
   &__right {
@@ -34,11 +46,28 @@
     display: table-cell;
     vertical-align: middle;
     padding: 3rem 5rem;
+
+    @include respond(tab-port) {
+      width: 100%;
+      display: inline-block;
+    }
   }
 
   &__img {
     display: block;
     width: 100%;
+
+    @include respond(tab-port) {
+      width: 50%;
+      float: left;
+      height: 200px;
+    }
+
+    @include respond(phone) {
+      width: 50%;
+      float: left;
+      height: 150px;
+    }
   }
 
   &__text {
